--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -2,6 +2,11 @@ version: "2.0"
 
 rules:
 
+- rule: Ask the user to rephrase whenever they send a message with low NLU confidence
+  steps:
+  - intent: nlu_fallback
+  - action: utter_default
+    
 - rule: greet
   steps:
   - intent: greet
