--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -5,18 +5,7 @@ on: [pull_request]
 jobs:
   lint-testing:
     name: Code Formatting Tests
-    runs-on: ubuntu-latest
-    
-    # Service containers to run with `lint-testing` job
-    services:
-      # duckling is used by `rasa test` command
-      # Label used to access the service container
-      duckling:
-        image: rasa/duckling
-        ports:
-        # Maps port 8000 on service container to the host VM where actions run
-        - 8000:8000
-          
+    runs-on: ubuntu-latest      
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python 3.7
@@ -69,6 +58,18 @@ jobs:
     name: Testing Stories
     runs-on: ubuntu-latest
     needs: [data-validation]
+    
+    # Service containers to run with the job: training-testing
+    # (-) duckling is used by command: rasa test
+    # https://docs.github.com/en/free-pro-team@latest/actions/guides/about-service-containers
+    services:
+      # Label used to access the service container
+      duckling:
+        image: rasa/duckling
+        ports:
+        # Maps port 8000 on service container to port 8000 on host VM
+        - 8000:8000
+        
     steps:
     - uses: actions/checkout@v1
     - id: files
