Update bot to rasa 2.1

--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@ pipeline:
   - name: DIETClassifier
     epochs: 100
   - name: FallbackClassifier
-    confidence_threshold: 0.7
+    threshold: 0.7
   - name: DucklingEntityExtractor
     url: http://localhost:8000
     dimensions:
