--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -8,23 +8,18 @@ jobs:
   docker:
     name: Build Action Server Docker Image
     runs-on: ubuntu-latest
-
     env:
       DOCKERHUB_USERNAME: oakela
-
     steps:
       - name: Checkout git repository 🕝
         uses: actions/checkout@v2
-
-      - name: Login to DockerHub Registry 🔢
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u ${{ env.DOCKERHUB_USERNAME }} --password-stdin || true
-
-      - name: Pull latest${{ matrix.image.tag_ext }} Docker image for caching
-        run: docker pull rasa/financial-demo:latest || true
-
-      - name: Build latest${{ matrix.image.tag_ext }} Docker image
-        run: docker build . --tag rasa/financial-demo:latest --cache-from rasa/financial-demo:latest
-
-      - name: Push image with latest tag 📦
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: docker push rasa/financial-demo:latest         
+      - name: Build Actions Server Image
+        uses: RasaHQ/rasa-action-server-gha@master
+        with:
+          actions_directory: 'actions'
+          requirements_file: 'actions/requirements-actions.txt'
+          docker_registry_login: ${{ env.DOCKERHUB_USERNAME }}
+          docker_registry_password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          docker_image_name: 'rasa/financial-demo'
+          docker_image_tag: 'latest'
+          rasa_sdk_version: '2.1.2'
