--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -46,8 +46,7 @@ jobs:
       - name: Rasa Train and Test GitHub Action
         uses: RasaHQ/rasa-train-test-gha@main
         with:
-          rasa_version: '2.1.3'
-          requirements_file: requirements-dev.txt
+          rasa_version: '2.1.3-spacy-en'
           test_type: all
           data_validate: true
           cross_validation: true
