--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -43,7 +43,16 @@ jobs:
     needs: [lint-testing, type-testing]
     steps:
       - uses: actions/checkout@v1
+      - id: files
+        uses: jitterbit/get-changed-files@v1
+      - name: set_training
+        if: |
+            contains(  steps.files.outputs.all, 'data/' )
+            || contains(  steps.files.outputs.all, 'config.yml' )
+            || contains(  steps.files.outputs.all, 'domain.yml' )
+        run: echo "RUN_TRAINING=true" >> $GITHUB_ENV
       - name: Rasa Train and Test GitHub Action
+        if: env.RUN_TRAINING == 'true'
         uses: RasaHQ/rasa-train-test-gha@main
         with:
           rasa_version: '2.1.3-spacy-en'
