--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -37,6 +37,24 @@ jobs:
       working-directory: ${{ github.workspace }}
       run: |
         make types
+  unit-testing:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade "pip<20"
+        pip install -r requirements-dev.txt
+    - name: Unit Tests
+      working-directory: ${{ github.workspace }}
+      run: |
+        pytest .
+
   training-testing:
     name: Training and Testing
     runs-on: ubuntu-latest
