use `amount-of-money` in the utterance

--- a/domain.yml
+++ b/domain.yml
@@ -224,7 +224,7 @@ responses:
   utter_insufficient_funds:
   - text: Sorry, you don't have enough money to do that!
   utter_credit_card_balance:
-  - text: The current balance for your {credit_card} account is {currency}{credit_card_balance}.
+  - text: The current balance for your {credit_card} account is {currency}{amount-of-money}.
   utter_recipients:
   - text: These are your known recpients to whom you can send money:{formatted_recipients}
   utter_greet:
