--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -4,8 +4,9 @@ on:
     branches:
     - master
     - rasa-2-0
-    paths:
-    - 'actions/**'
+    - gha
+    # paths:
+    # - 'actions/**'
 
 jobs:
   docker:
@@ -16,12 +17,16 @@ jobs:
     steps:
       - name: set_tag_latest
         if: |
-            github.base_ref == 'refs/heads/master'
+            github.base_ref == 'master'
         run: echo "TAG=latest" >> $GITHUB_ENV
       - name: set_tag_2
         if: |
-            github.base_ref == 'refs/heads/rasa-2-0'
+            github.base_ref == 'rasa-2-0'
         run: echo "TAG=2" >> $GITHUB_ENV
+      - name: set_tag_gha
+        if: |
+            github.base_ref == 'gha'
+        run: echo "TAG=gha" >> $GITHUB_ENV
       - run: echo ${{ env.TAG }}
       - name: Checkout git repository 🕝
         uses: actions/checkout@v2
