--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -21,18 +21,18 @@ jobs:
              echo $GITHUB_HEAD_REF
       - name: set_tag_latest
         if: |
-            ${{ env.GITHUB_HEAD_REF }}== 'refs/heads/master' 
-            || ${{ env.GITHUB_REF }} == 'refs/heads/master'
+            github.ref == 'refs/heads/master' 
+            || github.head_ref == 'refs/heads/master'
         run: echo "TAG=latest" >> $GITHUB_ENV
       - name: set_tag_2
         if: |
-            ${{ env.GITHUB_HEAD_REF }} == 'refs/heads/rasa-2-0' 
-            || ${{ env.GITHUB_REF }} == 'refs/heads/rasa-2-0'
+            github.ref == 'refs/heads/rasa-2-0' 
+            || github.head_ref == 'refs/heads/rasa-2-0'
         run: echo "TAG=2" >> $GITHUB_ENV
       - name: set_tag_gha
         if: |
-            ${{ env.GITHUB_HEAD_REF }} == 'refs/heads/gha' 
-            || ${{ env.GITHUB_REF }} == 'refs/heads/gha'
+            github.ref == 'refs/heads/gha' 
+            || github.head_ref == 'refs/heads/gha'
         run: echo "TAG=gha" >> $GITHUB_ENV
       - run: echo ${{ env.TAG }}
       - name: Checkout git repository 🕝
