--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,11 @@
 version: "2.0"
 language: en
 pipeline:
-  - name: WhitespaceTokenizer
-  - name: RegexFeaturizer
-  - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
+  - name: SpacyNLP
+    model: "en_core_web_md"
+    case_sensitive: false
+  - name: SpacyTokenizer
+  - name: SpacyFeaturizer
   - name: CountVectorsFeaturizer
     analyzer: "char_wb"
     min_ngram: 1
@@ -19,17 +20,10 @@ pipeline:
     - amount-of-money
     - time
     - number
-  - name: SpacyNLP
-    model: "en_core_web_md"
-    case_sensitive: false
   - name: "SpacyEntityExtractor"
-    # Note: It is not possible to use the SpacyTokenizer + SpacyFeaturizer in 
-    #       combination with the WhitespaceTokenizer, and as a result the
-    #       PERSON extraction by Spacy is not very robust.
-    #       Because of this, the nlu training data is annotated as well, and the
-    #       DIETClassifier will also extract PERSON entities.
     dimensions: ["PERSON"]
   - name: EntitySynonymMapper
+
 policies:
 - name: AugmentedMemoizationPolicy
 - name: TEDPolicy
