--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade "pip<20"
+        python -m pip install -U pip
         pip install -r requirements-dev.txt
     - name: Code Formatting Tests
       working-directory: ${{ github.workspace }}
@@ -31,7 +31,7 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade "pip<20"
+        python -m pip install -U pip
         pip install -r requirements-dev.txt
     - name: Type Checking
       working-directory: ${{ github.workspace }}
@@ -48,7 +48,7 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade "pip<20"
+        python -m pip install -U pip
         pip install -r requirements-dev.txt
     - name: Unit Tests
       working-directory: ${{ github.workspace }}
@@ -88,7 +88,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload model
         if: github.ref == 'refs/heads/master'
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         with:
           name: model
           path: models
