--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -128,6 +128,7 @@ nlu:
     - have a good day. time to go, bye
     - bye bye
     - ok i gtg
+    - Bye
 - intent: greet
   examples: |
     - good morning
@@ -445,6 +446,7 @@ nlu:
     - I want to order a pizza
     - what is the weather today
     - what is the weather
+    - this is ty in product onboarding
 - synonym: credit
   examples: |
     - credit card
